# haruna

./: .craft.ini  .directory  .flatpak-manifest.yml  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  REUSE.toml  appimage-amd64.yaml  bugs_and_feature_requests.md  config-haruna.h.cmake  libplacebo-vulkan-python-xml.patch  libplacebo-vulkan-python-xml.patch.license  org.freedesktop.ScreenSaver.xml  snapcraft.yaml
.reuse/: dep5
cmake/: FindFFmpeg.cmake  FindYouTubeDl.cmake  FindYtdlp.cmake
data/: CMakeLists.txt  org.kde.haruna.desktop  org.kde.haruna.metainfo.xml
data/animations/: 192-haruna-animation-sliding.png.license
data/icons/: .directory  64-apps-haruna.svg.license
doc/: CMakeLists.txt  index.docbook
help/: CustomCommandsSettings.html  GeneralSettings.html  PlaybackSettings.html  help.qrc
src/: CMakeLists.txt  actionsmanager.cpp  actionsmanager.h  application.cpp  application.h  database.cpp  database.h  file.cpp  file.h  framedecoder.cpp  framedecoder.h  global.cpp  global.h  haction.h  lockmanager.cpp  lockmanager.h  main.cpp  mpvobject.cpp  mpvobject.h  playlistitem.cpp  playlistitem.h  qml.qrc  qthelper.h  recentfile.h  settings.cpp  thumbnailimageprovider.cpp  thumbnailimageprovider.h  track.cpp  track.h  worker.cpp  worker.h  youtube.cpp  youtube.h
src/KDSingleApplication/: .clang-format  kdsingleapplication.h
src/framedecoder/: CMakeLists.txt  framedecoder.cpp  framedecoder.h
src/models/: actionsmodel.cpp  actionsmodel.h  chaptersmodel.cpp  chaptersmodel.h  customcommandsmodel.cpp  customcommandsmodel.h  custompropertiesmodel.cpp  custompropertiesmodel.h  mouseactionsmodel.cpp  mouseactionsmodel.h  playlistmodel.cpp  playlistmodel.h  recentfilesmodel.cpp  recentfilesmodel.h  subtitlesfoldersmodel.cpp  subtitlesfoldersmodel.h  tracksmodel.cpp  tracksmodel.h
src/models/playlist/: playlistfilterproxymodel.cpp  playlistfilterproxymodel.h  playlistmodel.cpp  playlistmodel.h  playlistmultiproxiesmodel.cpp  playlistmultiproxiesmodel.h  playlistproxymodel.cpp  playlistproxymodel.h  playlistrenamevalidator.cpp  playlistrenamevalidator.h  playlistsortproxymodel.cpp  playlistsortproxymodel.h
src/mpris2/: mediaplayer2.cpp  mediaplayer2.h  mediaplayer2player.cpp  mediaplayer2player.h
src/mpv/: mpvabstractitem.cpp  mpvabstractitem.h  mpvcontroller.cpp  mpvcontroller.h  mpvcore.cpp  mpvcore.h  mpvitem.cpp  mpvitem.h  mpvobject.cpp  mpvobject.h  mpvpreview.cpp  mpvpreview.h  mpvproperties.h  mpvqthelper.h  mpvrenderer.cpp  mpvrenderer.h  seekablerangesmodel.cpp  seekablerangesmodel.h
src/playlist/: CMakeLists.txt  Playlist.qml  PlaylistAdvancedSortWindow.qml  PlaylistItem.qml  PlaylistItemCompact.qml  PlaylistItemDelegate.qml  PlaylistItemWithThumbnail.qml  PlaylistSectionDelegate.qml  PlaylistTabBar.qml  PlaylistTabDelegate.qml  m3uparser.cpp  m3uparser.h  playlistfilterproxymodel.cpp  playlistfilterproxymodel.h  playlistgrouppropertymodel.cpp  playlistgrouppropertymodel.h  playlistgrouppropertyproxymodel.cpp  playlistgrouppropertyproxymodel.h  playlistmetadata.h  playlistmodel.cpp  playlistmodel.h  playlistmultiproxiesmodel.cpp  playlistmultiproxiesmodel.h  playlistproxymodel.cpp  playlistproxymodel.h  playlistrenamevalidator.cpp  playlistrenamevalidator.h  playlistsmanager.cpp  playlistsmanager.h  playlistsortpropertymodel.cpp  playlistsortpropertymodel.h  playlistsortpropertyproxymodel.cpp  playlistsortpropertyproxymodel.h  playlistsortproxymodel.cpp  playlistsortproxymodel.h
src/qml/: Actions.qml  FloatingFooter.qml  Footer.qml  HProgressBar.qml  HamburgerMenu.qml  Header.qml  Main.qml  MenuBarLoader.qml  Models.qml  MpvVideo.qml  Osd.qml  PlayList.qml  PlayListItem.qml  PlayListItemCompact.qml  PlayListItemWithThumbnail.qml  PlayListQt6.qml  VolumeSlider.qml  VolumeSliderQt6.qml  main.qml
src/qml/Haruna/Components/: AudioTracksMenu.qml  ColorPickerButton.qml  HamburgerMenu.qml  ImageAdjustmentSlider.qml  InputPopup.qml  LabelWithTooltip.qml  ListItem.qml  OpenUrlPopup.qml  ResizeHandler.qml  ResizeablePage.qml  SelectActionPopup.qml  SettingsBasePage.qml  SettingsHeader.qml  SubtitleTracksMenu.qml  SubtitlesFolders.qml  ToolTipButton.qml  qmldir
src/qml/Haruna/PlaylistItems/: PlayListItem.qml  PlayListItemCompact.qml  PlayListItemWithThumbnail.qml  PlaylistItemDelegate.qml  PlaylistTabDelegate.qml
src/qml/Menus/: AudioMenu.qml  ContextMenu.qml  FileMenu.qml  HelpMenu.qml  MpvContextMenu.qml  PlaybackMenu.qml  SettingsMenu.qml  SubtitlesMenu.qml  TrackMenuItems.qml  VideoMenu.qml  ViewMenu.qml
src/qml/Menus/Global/: GlobalAudioMenu.qml  GlobalFileMenu.qml  GlobalHelpMenu.qml  GlobalPlaybackMenu.qml  GlobalSettingsMenu.qml  GlobalSubtitlesMenu.qml  GlobalVideoMenu.qml  GlobalViewMenu.qml
src/qml/Settings/: AddNewCustomCommand.qml  AddNewCustomProperty.qml  Audio.qml  AudioSettings.qml  CustomCommands.qml  CustomCommandsSettings.qml  CustomProperties.qml  DatabaseSettings.qml  DebugSettings.qml  EditCustomCommand.qml  General.qml  GeneralSettings.qml  HarunaSettings.qml  Information.qml  Mouse.qml  MouseSettings.qml  Navigation.qml  Playback.qml  PlaybackSettings.qml  Playlist.qml  PlaylistSettings.qml  SelectActionPopup.qml  SettingsEditor.qml  SettingsWindow.qml  ShortcutsSettings.qml  Subtitles.qml  SubtitlesSettings.qml  VideoSettings.qml
src/settings/: CMakeLists.txt  audiosettings.kcfg  generalsettings.kcfg  informationsettings.kcfg  informationsettings.kcfgc  mousesettings.kcfg  playbacksettings.kcfg  playlistsettings.kcfg  subtitlessettings.kcfg  videosettings.kcfg
src/shader/: colorfill.frag
src/sql/: create-metadata_cache-table.sql  create-playback_position-table.sql  create-recent_files-table.sql  create-recent_files-table.sql.license
src/transcript/: CMakeLists.txt  Transcript.qml  subtitleline.h  subtitleparser.cpp  subtitleparser.h
src/utilities/: CMakeLists.txt  commandlineoptions.cpp  commandlineoptions.h  miscutilities.cpp  miscutilities.h  miscutils.cpp  miscutils.h  pathutils.cpp  pathutils.h  systemutils.cpp  systemutils.h
src/youtube/: CMakeLists.txt  youtube.cpp  youtube.h
(+49 files in other folders)
